fix dates on mobile

--- a/hosts/japgar.com/src/sass/partials/_primary.sass
+++ b/hosts/japgar.com/src/sass/partials/_primary.sass
@@ -121,7 +121,7 @@
         margin: 0 0 1.5rem 0
 
         &__title
-          display: inline-block
+          display: block
           margin: 0 2rem 0 0
 
       .extended
